ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Distributor_IMT__c/Distributor_IMT__c.object-meta.xml
<CustomObject>
    <label>Distributor</label>
    <nameField>
        <label>Distributor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>