ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Distributor_IMT__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Street__c &amp; &quot;, &quot; &amp; City__c &amp; BR() &amp;
State_Province__c &amp; &quot;, &quot; &amp; Zip_Postal_Code__c &amp; BR() &amp;
CASE(Country_Code__c, &quot;CA&quot;, &quot;Canada&quot;, &quot;US&quot;, &quot;United States&quot;, &quot;&quot;)</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>