ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Distributor_IMT__c/fields/Distributor_ID__c.field-meta.xml
<CustomField>
    <fullName>Distributor_ID__c</fullName>
    <label>Distributor ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>