ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Distributor_IMT__c/fields/MATCHES__c.field-meta.xml
<CustomField>
    <fullName>MATCHES__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ONLY used to select matching Distributors within the Invoice Upload flow.</description>
    <label>MATCHES</label>
    <type>Checkbox</type>
</CustomField>