ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Distributor_IMT__c/validationRules/Not_allowed_to_change_Distributor_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_allowed_to_change_Distributor_Name</fullName>
    <active>true</active>
    <description>to prevent contractors from changing these records</description>
    <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
    <errorMessage>You are not allowed to change this record.</errorMessage>
</ValidationRule>