ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Distributor_IMT__c/listViews/US_Distributors.listView-meta.xml
<ListView>
    <fullName>US_Distributors</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>State_Province__c</columns>
    <columns>Distributor_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country_Code__c</field>
        <operation>equals</operation>
        <value>US</value>
    </filters>
    <label>U.S. Distributors</label>
    <language>en_US</language>
</ListView>